Bug 37753 - [PATCH]mod_proxy_balancer Stickysession that uses URL doesn't move
Summary: [PATCH]mod_proxy_balancer Stickysession that uses URL doesn't move
Status: RESOLVED FIXED
Alias: None
Product: Apache httpd-2
Classification: Unclassified
Component: mod_proxy_balancer (show other bugs)
Version: 2.2.0
Hardware: All All
: P1 major (vote)
Target Milestone: ---
Assignee: Apache HTTPD Bugs Mailing List
URL:
Keywords: PatchAvailable
Depends on:
Blocks:
 
Reported: 2005-12-02 12:26 UTC by Kazuhiro Osawa
Modified: 2005-12-14 02:09 UTC (History)
0 users



Attachments
patch to mod_proxe_balancer URL stickysession bug. (435 bytes, text/plain)
2005-12-02 12:29 UTC, Kazuhiro Osawa
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kazuhiro Osawa 2005-12-02 12:26:48 UTC
It doesn't move in stickysession when not Cookie but URL is used when 
stickysession of the ProxyPass directive is specified when mod_proxy_balancer 
is used. 

Patch that enables operation is put up to the following. 
Please apply it to mod_proxy_bakancer.c. 

--- mod_proxy_balancer-old.c    2005-12-02 20:04:48.000000000 +0900
+++ mod_proxy_balancer.c        2005-12-02 20:05:51.000000000 +0900
@@ -113,7 +113,7 @@
     char *path = NULL;

     for (path = strstr(url, name); path; path = strstr(path + 1, name)) {
-        path += (strlen(name) + 1);
+        path += strlen(name);
         if (*path == '=') {
             /*
              * Session path was found, get it's value
Comment 1 Kazuhiro Osawa 2005-12-02 12:29:14 UTC
Created attachment 17119 [details]
patch to mod_proxe_balancer URL stickysession bug.
Comment 2 Kazuhiro Osawa 2005-12-02 12:29:57 UTC
It doesn't move in stickysession when not Cookie but URL is used when 
stickysession of the ProxyPass directive is specified when mod_proxy_balancer 
is used. 
Comment 3 Ruediger Pluem 2005-12-03 21:23:45 UTC
Thanks for submiting the patch. Fixed in trunk as r352010
(http://svn.apache.org/viewcvs.cgi?rev=352010&view=rev) and proposed for
backport in r352011 (http://svn.apache.org/viewcvs.cgi?rev=352010&view=rev).
Comment 4 Nick Kew 2005-12-14 11:09:42 UTC
Backported r356764