* Fix PR37753. Off by one bug in get_path_param eats up too much of the string   such that session identifier for sticky sessions is never found in URL.

Submitted by: Kazuhiro Osawa <ko yappo.ne.jp>
Reviewed by: Ruediger Pluem


git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@352010 13f79535-47bb-0310-9956-ffa450edef68